# mc-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Changelog.md  Kanban.md  README.md
app/: app.json  package-lock.json  package.json
app/src/app/: _layout.tsx  index.tsx  player.tsx  search.tsx
app/src/app/(tabs)/: _layout.tsx  discover.tsx  library.tsx  profile.tsx  radio.tsx
app/src/app/(tabs)/album/: [id].tsx
app/src/app/(tabs)/artist/: [id].tsx
app/src/app/(tabs)/browse/: albums.tsx  artists.tsx
app/src/app/(tabs)/playlist/: [id].tsx
app/src/app/auth/: login.tsx  register.tsx
app/src/app/connection/: index.tsx
app/src/components/: ActionSheet.tsx  AlbumCard.tsx  Artwork.tsx  Button.tsx  CircleButton.tsx  GlassCapsule.tsx  GlassSurface.tsx  HeaderIconButton.tsx  Icon.tsx  MiniPlayer.tsx  PlayerBackdrop.tsx  PlayerOverlay.tsx  Pressable.tsx  ScreenHeader.tsx  SectionHeader.tsx  Slider.tsx  Text.tsx  TextField.tsx  TrackRow.tsx
app/src/hooks/: useTheme.ts
app/src/lib/: format.ts  storage.ts
app/src/lib/api/: auth.ts  catalog.ts  client.ts  index.ts  paginate.ts  playlists.ts  stream.ts  types.ts
app/src/lib/auth/: store.ts
app/src/lib/catalog/: enrich.ts
app/src/lib/player/: engine.tsx  store.ts
app/src/lib/servers/: store.ts
app/src/lib/settings/: store.ts
app/src/theme/: colors.ts  tokens.ts
configs/: default.toml
deploy/compose/: Dockerfile.rust-services  docker-compose.deps.yml  docker-compose.stack.yml
docs/: API_EXAMPLES.md  About.md
go/: go.mod
go/cmd/analytics/: main.go
go/cmd/auth/: main.go
go/cmd/catalog/: main.go
go/cmd/discovery/: main.go
go/cmd/downloads/: main.go
go/cmd/gateway/: main.go
go/cmd/heartbeat/: main.go
go/cmd/ingestion/: main.go
go/cmd/notification/: main.go
go/cmd/playlist/: main.go
go/cmd/recommend/: main.go
go/cmd/search/: main.go
go/cmd/storage/: main.go
go/cmd/stream/: main.go
go/cmd/sync/: main.go
go/cmd/transcoding/: main.go
go/internal/common/: config.go  db.go  errors.go
migrations/postgres/: 001_create_users.sql  002_create_artists.sql  003_create_albums.sql  004_create_tracks.sql  005_create_playlists.sql  006_create_playlist_tracks.sql  007_create_playback_history.sql  008_create_sessions.sql  009_create_recommendations.sql  010_create_analytics_events.sql  011_create_storage_files.sql  012_create_notifications.sql  013_create_search_indexes.sql  014_create_setup_state.sql  015_create_transcoding_jobs.sql  016_add_storage_files_updated_at.sql  017_promote_first_user_admin_if_missing.sql  018_create_media_processing_settings.sql  019_create_server_runtime_settings.sql  020_add_manual_metadata.sql  021_add_metadata_cache_and_scan_progress.sql
migrations/sqlite/: 001_initial_schema.sql
scripts/: backfill_artwork_from_itunes.ps1
services/analytics/: Cargo.toml
services/auth/: Cargo.toml
services/auth/src/: lib.rs  main.rs  models.rs  repository.rs  server.rs
services/catalog/: Cargo.toml
services/catalog/src/: main.rs  models.rs  repository.rs  server.rs
services/combined/: Cargo.toml
services/combined/src/: main.rs
services/discovery/: Cargo.toml
services/downloads/: Cargo.toml
services/gateway/: Cargo.toml
services/gateway/src/: admin_control.rs  lib.rs  main.rs  media_processing.rs  state.rs
services/gateway/src/routes/: auth.rs  catalog.rs  health.rs  hls.rs  ingestion.rs  mod.rs  playlist.rs  settings.rs  stream.rs
services/heartbeat/: Cargo.toml
services/heartbeat/src/: main.rs
services/ingestion/: Cargo.toml
services/ingestion/src/: itunes.rs  lib.rs  main.rs  metadata.rs  models.rs  repository.rs  server.rs
services/notification/: Cargo.toml
services/playlist/: Cargo.toml
services/playlist/src/: lib.rs  main.rs  models.rs  repository.rs  server.rs
services/recommend/: Cargo.toml
services/search/: Cargo.toml
services/search/src/: repository.rs
services/storage/: Cargo.toml
services/storage/src/: main.rs  models.rs  repository.rs  server.rs
services/stream/: Cargo.toml
services/stream/src/: handlers.rs  lib.rs  main.rs  repository.rs  server.rs
services/sync/: Cargo.toml
services/sync/src/: server.rs
services/transcoding/: Cargo.toml
services/transcoding/src/: main.rs  models.rs  repository.rs  server.rs
shared/common/: Cargo.toml
shared/common/src/: auth.rs  config.rs  cors.rs  db.rs  error.rs  events.rs  lib.rs  middleware.rs  redis.rs  shutdown.rs  storage.rs  telemetry.rs
shared/proto/: Cargo.toml  build.rs
shared/proto/proto/analytics/v1/: analytics.proto
shared/proto/proto/auth/v1/: auth.proto
shared/proto/proto/catalog/v1/: catalog.proto
shared/proto/proto/common/v1/: common.proto
shared/proto/proto/discovery/v1/: discovery.proto
shared/proto/proto/downloads/v1/: downloads.proto
shared/proto/proto/heartbeat/v1/: heartbeat.proto
shared/proto/proto/ingestion/v1/: ingestion.proto
shared/proto/proto/notification/v1/: notification.proto
shared/proto/proto/playlist/v1/: playlist.proto
shared/proto/proto/recommend/v1/: recommend.proto
shared/proto/proto/search/v1/: search.proto
shared/proto/proto/storage/v1/: storage.proto
shared/proto/proto/stream/v1/: stream.proto
shared/proto/proto/sync/v1/: sync.proto
shared/proto/proto/transcoding/v1/: transcoding.proto
shared/proto/src/: lib.rs
web/: package.json  pnpm-lock.yaml
web/apps/admin/: index.html  package.json
web/apps/admin/src/: App.tsx  index.css
web/apps/admin/src/pages/: AuditLogsPage.tsx  CurationPage.tsx  DashboardPage.tsx  IntegrationsPage.tsx  LibraryPage.tsx  LoginPage.tsx  MachineLearningPage.tsx  MetadataEditorPage.tsx  OperationsPage.tsx  PlaylistsAdminPage.tsx  ScanPage.tsx  SecurityPage.tsx  SettingsPage.tsx  SystemConfigPage.tsx  UsersPage.tsx
web/apps/player/: TODO.md  index.html  package.json  tsconfig.app.json  vite.config.ts
web/apps/player/src/: App.tsx  main.tsx
web/apps/player/src/hooks/: useLibraryQuickAdd.ts
web/apps/player/src/lib/: artwork.ts  curation.ts  format.ts  library.ts
web/apps/player/src/pages/: AlbumPage.tsx  ArtistPage.tsx  DiscoveryPage.tsx  (+7 more)
(+13 files in other folders)
