[workspace]
resolver = "2"
members = [
    "shared/common",
    "shared/proto",
    "services/gateway",
    "services/auth",
    "services/catalog",
    "services/storage",
    "services/stream",
    "services/downloads",
    "services/heartbeat",
    "services/analytics",
    "services/sync",
    "services/discovery",
    "services/recommend",
    "services/search",
    "services/playlist",
    "services/notification",
    "services/transcoding",
    "services/ingestion",
    "services/combined",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Messaging (RabbitMQ)
lapin = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"

# Async traits
async-trait = "0.1"

# Shared crates
music-common = { path = "shared/common" }
music-proto = { path = "shared/proto" }
