[package]
name = "music-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "music-server"
path = "src/main.rs"

[dependencies]
music-common = { workspace = true }
music-proto = { workspace = true }
music-auth = { path = "../auth" }
music-catalog = { path = "../catalog" }
music-storage = { path = "../storage" }
music-stream = { path = "../stream" }
music-ingestion = { path = "../ingestion" }
music-transcoding = { path = "../transcoding" }
music-playlist = { path = "../playlist" }
music-gateway = { path = "../gateway" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }

[features]
default = ["postgres"]
postgres = []
sqlite = ["music-common/sqlite"]
