[package]
name = "music-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
music-common = { workspace = true }
music-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
