[package]
name = "music-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
music-common = { workspace = true }
music-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
lofty = "0.22"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
